--- a/sniffersapp/templates/connections/contact_new.html
+++ b/sniffersapp/templates/connections/contact_new.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static i18n %}
+{% load humanize %}
 {% block title %}Connections{% endblock %}
 {% block head_title %}Connections{% endblock %}
 
@@ -7,11 +8,14 @@
 <link href="{% static 'css/jquery.autocomplete.css' %}" rel="stylesheet">
 <link href="{% static 'css/plugins/summernote/summernote.css' %}" rel="stylesheet">
 <link href="{% static 'css/plugins/summernote/summernote-bs3.css' %}" rel="stylesheet">
+{{ contact_form.media.css }}
 {% endblock %}
 
+{% block actions %}
+<a class="btn btn-primary btn-lg visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'connections:list' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
+{% endblock %}
 
 {% block breadcrumb %}
-<h2>Contact</h2>
 <ol class="breadcrumb">
     <li>
         <a href="{% url 'home' %}">Home</a>
@@ -20,48 +24,72 @@
         <a href="{% url 'connections:list' %}">Connections</a>
     </li>
     <li class="active">
-        <strong>Add Person</strong>
+        <strong>Add Contact</strong>
     </li>
 </ol>
 {% endblock breadcrumb %}
 
 {% block content %}
-<div class="col-lg-12">
-    <div class="ibox">
-        <div class="ibox-content">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="m-b-md">
-                        <h2>New Contact</h2>
-                    </div>
-                </div>
-            </div>
-            <form id="contact_form" role="form" method="POST">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-lg-12">
-                        <dl class="dl-horizontal">
-                            <dt>First name:</dt> <dd>{{ contact_form.first_name }}</dd>
-                            <dt>Last name:</dt> <dd>{{ contact_form.last_name }}</dd>
-                            <dt>Company:</dt> <dd>{{ contact_form.company_name }}</dd>
-                            <dt>Contact Status:</dt> <dd>{{ contact_form.contact_status }}</dd>
-                            <dt>Job title:</dt> <dd>{{ contact_form.job_title }}</dd>
-                            <dt>Location:</dt> <dd>{{ contact_form.location }}</dd>
-                            <dt>Email:</dt> <dd>{{ contact_form.email_work }}</dd>
-                            <dt>Mobile phone:</dt> <dd>{{ contact_form.phone_mobile }}</dd>
-                            <dt>Office phone:</dt> <dd>{{ contact_form.phone_work }}</dd>
-                            <dt>linkedin:</dt> <dd>{{ contact_form.linkedin }}</dd>
-                            <dt>facebook:</dt> <dd>{{ contact_form.facebook }}</dd>
-                            <dt>twitter:</dt> <dd>{{ contact_form.twitter }}</dd>
-                            <dt>Info:</dt> <dd>{{ contact_form.additional_info }}</dd>
-                        </dl>
-                    </div>
-                </div>
-                <input style="margin-left:15px;margin-top:20px;"type="submit" class="btn btn-primary btn-lg" value="Save Contact">
-            </form>
-        </div>
+<div class="row">
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'connections:list' %}">
+          <i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back
+        </a>
+    </div>
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" onclick="contact_form.myVariable.name='new_contact';contact_form.submit();">
+          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Contact
+        </a>
     </div>
 </div>
+
+<div class="col-lg-12">
+  <form id="contact_form" role="form" method="POST">
+      <input type="hidden" id="myVariable" name="" />
+      {% csrf_token %}
+      {% if contact_form.errors %}
+      <div class="ibox-content m-b-sm border-bottom">
+          <h4><strong>Please complete the following fields:</strong></h4>
+          {% for field in contact_form %}
+            {% if field.errors %}
+            <li style="font-weight: 700;font-size: 13px;">
+              {{ field.label }}
+            </li>
+            {% endif %}
+          {% endfor %}
+      </div>
+      {% endif %}
+      <div class="ibox-content m-b-sm border-bottom">
+        <div class="row">
+            <div class="col-lg-12">
+                <dl class="dl-horizontal">
+                    <dt>First name:</dt> <dd>{{ contact_form.first_name }}</dd>
+                    <dt>Last name:</dt> <dd>{{ contact_form.last_name }}</dd>
+                    <dt>Company:</dt> <dd style="margin-bottom: 10px;">{{ contact_form.company }}</dd>
+                    <dt>Contact Status:</dt> <dd>{{ contact_form.contact_status }}</dd>
+                    <dt>Job title:</dt> <dd>{{ contact_form.job_title }}</dd>
+                    <dt>Location:</dt> <dd>{{ contact_form.location }}</dd>
+                    <dt>Email:</dt> <dd>{{ contact_form.email_work }}</dd>
+                    <dt>Mobile phone:</dt> <dd>{{ contact_form.phone_mobile }}</dd>
+                    <dt>Office phone:</dt> <dd>{{ contact_form.phone_work }}</dd>
+                    <dt>linkedin:</dt> <dd>{{ contact_form.linkedin }}</dd>
+                    <dt>facebook:</dt> <dd>{{ contact_form.facebook }}</dd>
+                    <dt>twitter:</dt> <dd>{{ contact_form.twitter }}</dd>
+                    <dt>Info:</dt> <dd>{{ contact_form.additional_info }}</dd>
+                </dl>
+            </div>
+        </div>
+      </div>
+  </form>
+  <div class="row">
+    <div class="docket_buttons btn-group pull-right" style="margin-right: 15px; margin-top: 20px;">
+        <a class="btn btn-primary btn-lg visible-xs visible-sm" onclick="contact_form.myVariable.name='new_contact';contact_form.submit();">
+          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Contact
+        </a>
+    </div>
+  </div>
+</div>
+
 {% endblock content %}
 
 {% block javascript %}
@@ -153,19 +181,8 @@ $('#summernote').summernote({
 });
 
 
-var companies = [
-  {% for company in company_list %}
-  '{{ company }}',
-  {% endfor %}
-];
-
-$(function() {
-  $("#contact_company_tag").autocomplete({
-    source:[companies]
-  });
-});
 
 </script>
 
-
+{{ contact_form.media.js }}
 {% endblock javascript %}
