--- a/sniffersapp/templates/daily_dockets/docket_list.html
+++ b/sniffersapp/templates/daily_dockets/docket_list.html
@@ -23,11 +23,16 @@
 
 
 {% block content %}
-<div class="docket_buttons btn-group visible-md visible-lg pull-left">
-    <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-paste" style="padding-right: 5px;"></i>New Docket</a></li>
-</div>
-<div class="docket_buttons btn-group visible-md visible-lg pull-left">
-    <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:export_dockets' %}"><i class="fa fa-upload" style="padding-right: 5px;"></i>Export Dockets</a></li>
+<div class="row">
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-paste" style="padding-right: 5px;"></i>New Docket</a></li>
+    </div>
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:export_dockets' %}"><i class="fa fa-upload" style="padding-right: 5px;"></i>Dockets CSV</a></li>
+    </div>
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:dockets_myob' %}"><i class="fa fa-exchange" style="padding-right: 5px;"></i>Dockets MYOB</a></li>
+    </div>
 </div>
 
 <div class="col-lg-12">
