--- a/sniffersapp/templates/equipment/equipment_list.html
+++ b/sniffersapp/templates/equipment/equipment_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
-{% load static i18n humanize %}
+{% load static i18n %}
+{% load humanize %}
 
 {% block title %}Equipment{% endblock %}
 {% block head_title %}Equipment{% endblock %}
@@ -17,89 +17,44 @@
 {% endblock %}
 
 {% block actions %}
-<a href="{% url 'equipment:add' %}" class="btn btn-primary">New Equipment</a>
-<a href="{% url 'equipment:bookings' %}" class="btn btn-info">Bookings</a>
+<a class="btn btn-primary visible-sm visible-xs" href="{% url 'equipment:equipment_new' %}">Add Equipment</a></li>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-lg-3">
-        <div class="widget style1">
-            <div class="row">
-                <div class="col-xs-4 text-center"><i class="fa fa-trophy fa-5x"></i></div>
-                <div class="col-xs-8 text-right">
-                    <span>Equipment count</span>
-                    <h2 class="font-bold">{{ equipment_list.count }}</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-3">
-        <div class="widget style1 navy-bg">
-            <div class="row">
-                <div class="col-xs-4"><i class="fa fa-usd fa-5x"></i></div>
-                <div class="col-xs-8 text-right">
-                    <span>This month's booking value</span>
-                    <h2 class="font-bold">$33,960</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-3">
-        <div class="widget style1 lazur-bg">
-            <div class="row">
-                <div class="col-xs-4"><i class="fa fa-money fa-5x"></i></div>
-                <div class="col-xs-8 text-right">
-                    <span>Last month's booking value</span>
-                    <h2 class="font-bold">$26,498</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-3">
-        <div class="widget style1 yellow-bg">
-            <div class="row">
-                <div class="col-xs-4"><i class="fa fa-truck fa-5x"></i></div>
-                <div class="col-xs-8 text-right">
-                    <span>Most active equipment</span>
-                    <h2 class="font-bold">Truck</h2>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="docket_buttons btn-group visible-md visible-lg pull-left">
+    <a class="btn btn-primary btn-sm" href="{% url 'equipment:equipment_new' %}"><i class="fa fa-paste" style="padding-right: 5px;"></i>Add Equipment</a></li>
+</div>
+<div class="docket_buttons btn-group visible-md visible-lg pull-left">
+    <a class="btn btn-primary btn-sm" href="#"><i class="fa fa-upload" style="padding-right: 5px;"></i>Export</a></li>
+</div>
+<div class="docket_buttons btn-group visible-md visible-lg pull-left">
+    <a class="btn btn-primary btn-sm" href="#"><i class="fa fa-download" style="padding-right: 5px;"></i>Import</a></li>
 </div>
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="ibox float-e-margins">
-            <div class="ibox-content">
-                <table id="datatables-equlist" class="table table-hover dataTables-equipment">
+<div class="col-lg-12">
+    <div class="ibox float-e-margins col-lg-12">
+        <div class="ibox-content ibox-content-65vh">
+            <div class="table-responsive">
+                <table id="dataTables-equipment" class="table table-hover dataTables-equipment">
                     <thead>
                         <tr>
-                            <th>Name</th>
+                            <th>ID</th>
+                            <th>Year</th>
+                            <th>Make</th>
                             <th>Model</th>
-                            <th>Equipment Type</th>
-                            <th>Purchase Date</th>
-                            <th>Purchase Amount</th>
-                            <th>Base Rate</th>
-                            <th>Actions</th>
+                            <th>Registration</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for equipment in equipment_list %}
-                        <tr>
-                            <td>{{ equipment.name }}</td>
-                            <td>{{ equipment.model}}</td>
-                            <td>{{ equipment.equipment_type }}</td>
-                            <td>{{ equipment.purchase_date }}</td>
-                            <td>${{ equipment.purchase_amount|intcomma }}</td>
-                            <td>${{ equipment.base_rate|intcomma }}</td>
-                            <td>
-                                <a href="{% url 'equipment:edit' equipment.id %}" class="btn btn-primary btn-sm">Edit</a>
-                                <a href="{% url 'equipment:book' equipment.id %}" class="btn btn-info btn-sm">Book</a>
-                            </td>
+                        <tr class="table-row" data-href="{% url 'equipment:equipment_detail' equipment.id %}" id="{{ equipment.id }}" style="...">
+                            <td>{{ equipment.equipment_id }}</td>
+                            <td>{{ equipment.year }}</td>
+                            <td>{{ equipment.make }}</td>
+                            <td>{{ equipment.model }}</td>
+                            <td>{{ equipment.registration }}</td>
                         </tr>
-                        {% endfor %}
+                        {% endfor%}
                     </tbody>
                 </table>
             </div>
@@ -107,15 +62,17 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock content %}
+
 
 {% block javascript %}
 <script src="{% static 'js/datatables.min.js' %}"></script>
 <script>
 $('.dataTables-equipment').DataTable({
+    "ordering": false,
     "dom": "ft",
     "lengthChange": false,
-    pageLength:1000,
+    "paging": false,
     responsive: true,
     language: {
         search: "_INPUT_",
@@ -123,5 +80,15 @@ $('.dataTables-equipment').DataTable({
         "emptyTable": "No equipment has been created yet."
     },
 });
+$(document).ready(function($) {
+    $(".table-row").click(function() {
+        window.location = $(this).data("href");
+    });
+});
 </script>
+
+{% endblock javascript %}
+
+{% block css %}
+<link href="{% static 'css/datatables.min.css' %}" rel="stylesheet">
 {% endblock %}
