--- a/sniffersapp/templates/equipment/equipment_detail.html
+++ b/sniffersapp/templates/equipment/equipment_detail.html
@@ -1,41 +1,82 @@
 {% extends "base.html" %}
-{% load static %}
-{% load crispy_forms_tags %}
+{% load static i18n %}
+{% load humanize %}
 
-{% block title %}User: {{ object.username }}{% endblock %}
+{% block title %}Equipment {{ equipment_id }}{% endblock %}
+{% block head_title %}Equipment {{ projequipment_id }}{% endblock %}
+
+{% block breadcrumb %}
+<ol class="breadcrumb">
+    <li>
+        <a href="">Home</a>
+    </li>
+    <li>
+        <a href="{% url 'equipment:list' %}">Equipment List</a>
+    </li>
+    <li class="active">
+        <strong>{{ equipment.equipment_id }}</strong>
+    </li>
+</ol>
+{% endblock breadcrumb %}
 
 {% block content %}
-<div class="container">
-
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="ibox">
+                <div class="ibox-content">
+                    <div class="row">
+                        <div class="col-xs-8">
+                            <div class="m-b-md">
+                                <h2>{{ equipment.equipment_id  }}</h2>
+                            </div>
+                        </div>
+                        <div class="col-xs-4 right">
+                            <a href="{% url 'equipment:equipment_edit' equipment.id %}" class="btn btn-primary">Edit Equipment</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <dl class="dl-horizontal">
+                                <dt>Equipment ID:</dt> <dd><a href="#" class="text-navy"> {{ equipment.equipment_id }}</a> </dd>
+                                <dt>Year</dt> <dd>{{ equipment.year }}</dd>
+                            </dl>
+                        </div>
+                        <div class="col-lg-7" id="cluster_info">
+                            <dl class="dl-horizontal" >
+                                <dt>Added by:</dt> <dd>{{ equipment.created_user.username }}</dd>
+                                <dt>Last Updated:</dt> <dd>{{ equipment.updated_on }}</dd>
+                                <dt>Created:</dt> <dd> 	{{ equipment.created_on }} </dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel blank-panel">
+                                <div class="panel-heading">
+                                    <div class="panel-options">
+                                        <ul class="nav nav-tabs">
+                                            <li class="active"><a href="#tab-1" data-toggle="tab">About</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!--Tab Content Start-->
+                                <div class="panel-body">
+                                    <div class="tab-content">
+                                        <!--About Tab Start-->
+                                        <div class="tab-pane active" id="tab-1">
+                                            <div class="feed-activity-list">
+                                                <p> add info  </p>
+                                            </div>
+                                        </div>
+                                        <!--About Tab End-->
+                                    </div>
+                                </div>
+                                <!--Tab Content End-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
-{% if object == request.user %}
-<!-- Action buttons -->
-<div class="row">
-
-  <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
-    <!-- Your Stuff: Custom user template urls -->
-  </div>
-
-</div>
-
-<!-- End Action buttons -->
-{% endif %}
-<div>
-  {% if request.user.is_superuser %}
-  <a class="btn btn-primary" href="{% url 'users:adminupdate' pk=user.pk %}" role="button">Update Info</a>
-  {% endif %}
-
-
-</div>
 {% endblock content %}
