--- a/sniffersapp/templates/daily_dockets/docket_signature.html
+++ b/sniffersapp/templates/daily_dockets/docket_signature.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-sm-4 docket_text">
                         <span class="docket_text_heading">UNIT NO:</span>
-                        <span>Need to add</span>
+                        <span>{{ docket.equipment_num }}</span>
                     </div>
                 </div>
                 <div class="row">
