--- a/sniffersapp/templates/base.html
+++ b/sniffersapp/templates/base.html
@@ -79,6 +79,7 @@
     <script src="{% static 'js/plugins/metisMenu/jquery.metisMenu.js' %}"></script>
     <script src="{% static 'js/plugins/slimscroll/jquery.slimscroll.min.js' %}"></script>
     <script src="{% static 'js/inspinia.js' %}"></script>
+    <script src="{% static 'js/project.js' %}"></script>
     {% block javascript %}{% endblock %}
 </body>
 
