--- a/sniffersapp/templates/auth/user_list.html
+++ b/sniffersapp/templates/auth/user_list.html
@@ -1,17 +1,148 @@
 {% extends "base.html" %}
 {% load static i18n %}
-{% block title %}Members{% endblock %}
+{% block title %}Users {% endblock %}
+
+{% block head_title %}Users{% endblock %}
+
+{% block breadcrumb %}
+<ol class="breadcrumb">
+    <li>
+        <a href="{% url 'home' %}">Home</a>
+    </li>
+    <li class="active">
+        <strong>Usrs</strong>
+    </li>
+</ol>
+{% endblock %}
+
+{% block actions %}
+<a class="btn btn-primary visible-xs visible-sm" href="{% url 'invitations:send-invite' %}">Invite New User</a>
+{% endblock %}
 
 {% block content %}
-<div class="container">
-  <h2>Users</h2>
-
-  <div class="list-group">
-    {% for user in user_list %}
-      <a href="{% url 'users:detail' user.username %}" class="list-group-item">
-        <h4 class="list-group-item-heading">{{ user.username }}</h4>
-      </a>
-    {% endfor %}
-  </div>
+<div class="row">
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+      <a class="btn btn-primary btn-sm" href="{% url 'invitations:send-invite' %}"><i class="fa fa-plus" style="padding-right: 5px;"></i>Invite New User</a></li>
+    </div>
 </div>
+
+<div class="col-lg-12">
+    <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-user"></i> Users</a></li>
+        <li class=""><a data-toggle="tab" href="#tab-2"><i class="fa fa-envelope"></i> Pending Invitations</a></li>
+    </ul>
+</div>
+
+<!--Tab Content Start-->
+<div class="col-lg-12">
+    <div class="ibox float-e-margins col-lg-12">
+        <div class="ibox-content ibox-content-65vh">
+            <div class="tab-content">
+                <!--User Tab Start-->
+                <div id="tab-1" class="tab-pane active">
+                    <div class="ibox float-e-margins">
+                        <div>
+                            <!--Users Data Table Start-->
+                            <div class="table-responsive">
+                                <table id="dataTables-users" class="table table-hover dataTables-users">
+                                    <thead>
+                                        <tr>
+                                            <th>UserName</th>
+                                            <th>First Name </th>
+                                            <th>Surname</th>
+                                            <th>Email</th>
+                                            <th>Last Login</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                     {% include 'auth/partial_user_list.html' %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Users Tab End-->
+
+                <!--Pending Tab Start-->
+                <div id="tab-2" class="tab-pane">
+                    <div class="ibox float-e-margins">
+                        <div>
+                            <!--Company Data Table Start-->
+                            <div class="table-responsive">
+                                <table id="dataTables-pending" class="table table-hover dataTables-pending">
+                                    <thead>
+                                        <tr>
+                                            <th>Email</th>
+                                            <th>Invitation Created</th>
+                                            <th>Invitation Sent</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% include 'invitations/partial_invitation_list.html' %}
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!--Company Data Table End-->
+                        </div>
+                    </div>
+                </div>
+                <!--Pending Tab End -->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- THE MODAL INUSE-->
+  <div class="modal fade" id="modal-users">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+      </div>
+    </div>
+  </div>
+
 {% endblock content %}
+
+{% block javascript %}
+<script src="{% static 'js/datatables.min.js' %}"></script>
+<script>
+$('.dataTables-users').DataTable({
+    "ordering": false,
+    "dom": "ft",
+    "lengthChange": false,
+    "paging": false,
+    responsive: true,
+    language: {
+        search: "_INPUT_",
+        searchPlaceholder: "Search Users",
+        "emptyTable": "No Users created yet."
+    },
+});
+$(document).ready(function($) {
+    $(".table-row").click(function() {
+        window.location = $(this).data("href");
+    });
+});
+
+$('.dataTables-pending').DataTable({
+    "ordering": false,
+    "dom": "ft",
+    "lengthChange": false,
+    "paging": false,
+    responsive: true,
+    language: {
+        search: "_INPUT_",
+        searchPlaceholder: "Search",
+        "emptyTable": "No Pending Users."
+    },
+});
+</script>
+
+{% endblock javascript %}
+
+{% block css %}
+<link href="{% static 'css/datatables.min.css' %}" rel="stylesheet">
+{% endblock %}
+
