--- a/sniffersapp/templates/invitations/forms/_invite.html
+++ b/sniffersapp/templates/invitations/forms/_invite.html
@@ -1,30 +1,55 @@
 {% extends "base.html" %}
 {% load static i18n %}
-{% block title %}Members{% endblock %}
+{% block title %}Users {% endblock %}
+
+{% block head_title %}Users{% endblock %}
+
+{% block breadcrumb %}
+<ol class="breadcrumb">
+    <li>
+        <a href="">Home</a>
+    </li>
+    <li>
+        <a href="{% url 'users:list' %}">User List</a>
+    </li>
+    <li class="active">
+        <strong>Invite New User</strong>
+    </li>
+</ol>
+{% endblock breadcrumb %}
 
 {% block content %}
+<div class="row">
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'users:list' %}">
+          <i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back
+        </a>
+    </div>
+</div>
 
-<h4 class="title">{% trans "Invite" %}</h4>
+<div class="col-lg-12">
+    <div class="ibox float-e-margins col-lg-12">
+        <div class="ibox-content ibox-content-65vh">
 
-<br>
+          <span class="alert alert-info">{% trans "Please add an email below. The user will recieve an email with instructions." %}</span>
+          <br>
+          <br>
 
-<span class="alert alert-info">{% trans "Please add an email below. The user will recieve an email with instructions." %}</span>
-
-<br>
-<br>
-
-<form id="invite-form" method="POST" action="{% url 'invitations:send-invite' %}">
-  {% csrf_token %}
-  <div class="form-group">
-      <input type="text" name="email" id="id_email" value="{{ form.email.value }}" class="form-control validate-email" placeholder="{% trans 'Email' %}">
-  </div>
-  <div class="form-group">
-    {% for error in form.email.errors %}
-      <div class="alert alert-danger">{{ error }}</div>
-    {% endfor %}
-    {{ success_message }}
-  </div>
-  <input type="submit" value="Submit" class="btn btn-primary generic-ajax-submit">
-</form>
+          <form id="invite-form" method="POST" action="{% url 'invitations:send-invite' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <input type="text" name="email" id="id_email" value="{{ form.email.value }}" class="form-control validate-email" placeholder="{% trans 'Email' %}">
+            </div>
+            <div class="form-group">
+              {% for error in form.email.errors %}
+                <div class="alert alert-danger">{{ error }}</div>
+              {% endfor %}
+              {{ success_message }}
+            </div>
+            <input type="submit" value="Submit" class="btn btn-primary generic-ajax-submit">
+          </form>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
