--- a/sniffersapp/templates/auth/user_list.html
+++ b/sniffersapp/templates/auth/user_list.html
@@ -10,7 +10,7 @@
         <a href="{% url 'home' %}">Home</a>
     </li>
     <li class="active">
-        <strong>Usrs</strong>
+        <strong>Users</strong>
     </li>
 </ol>
 {% endblock %}
