--- a/sniffersapp/templates/includes/sidebar.html
+++ b/sniffersapp/templates/includes/sidebar.html
@@ -43,7 +43,7 @@
                 <a href="{% url 'daily_dockets:list' %}"><i class="fa fa-sticky-note-o" title="Dockets"></i> <span class="nav-label">Daily Dockets</span></a>
             </li>
             <li>
-                <a href="{% url 'timesheets:timesheet_calender' %}"><i class="fa fa-clock-o" title="Timesheets"></i> <span class="nav-label">Timesheets</span></a>
+                <a href="{% url 'timesheet:timesheet_list' %}"><i class="fa fa-clock-o" title="Timesheets"></i> <span class="nav-label">Timesheets</span></a>
             </li>
         </ul>
 
